Question 1-3 of the first milestone
git-svn-id: svn+ssh://svn.cs.mcgill.ca/2012/groups/group-h@13118 6669c6d1-5a39-0410-bbc6-daf4d3d1134a

--- a/tiny/flex+bison/Makefile
+++ b/tiny/flex+bison/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS = -Wall -ansi -pedantic
 
 main: y.tab.o lex.yy.o main.o tree.h tree.o pretty.h pretty.o eval.h eval.o memory.h memory.o
-	$(CC) lex.yy.o y.tab.o tree.o pretty.o eval.o memory.o main.o -o tiny -lfl
+	$(CC) lex.yy.o y.tab.o tree.o pretty.o eval.o memory.o main.o -o tiny -lfl -lm
 
 y.tab.c y.tab.h: tiny.y
 	bison --yacc --defines tiny.y
