weeder exits after finding atleats one error

--- a/wig/src/Makefile
+++ b/wig/src/Makefile
@@ -3,12 +3,17 @@
 #.PHONY wig
 
 # to compile the code
-#wig: clean grammar
-#	javac wig/*.java wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/#analysis/*.java 
+wig: clean grammar
+	javac wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/analysis/*.java 
 
 # to generate the compiler code
 grammar: wig.sablecc
 	sablecc wig.sablecc
 
+# check results
+check:	
+	./check
+
+# to clean
 clean:	
 	rm -rf wig/*.class wig/lexer/ wig/parser/ wig/node/ wig/analysis/ 
