added apache commons src files because the jars were not working

--- a/wig/src/Makefile
+++ b/wig/src/Makefile
@@ -4,7 +4,7 @@
 
 # to compile the code
 wig: clean grammar
-	javac wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/analysis/*.java 
+	javac wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/analysis/*.java wig/commons/cli/*.java
 
 # to generate the compiler code
 grammar: wig.sablecc
