Small change to Makefile

--- a/wig/src/Makefile
+++ b/wig/src/Makefile
@@ -15,7 +15,7 @@ all:
 
 # to compile the code
 code: clean grammar
-	javac wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/analysis/*.java wig/compiler/*.java wig/weeder/*.java wig/commons/cli/*.java wig/symboltable/*.java
+	javac wig/lexer/*.java wig/parser/*.java wig/node/*.java wig/analysis/*.java wig/compiler/*.java wig/weeder/*.java wig/commons/cli/*.java wig/symboltable/*.java wig/symboltable/symbols/*.java wig/type/*.java
 
 # to generate the compiler code
 grammar: wig.sablecc
